# futurenhs-platform

./: .gitignore  LICENSE
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ISSUE_TEMPLATE.md  frontend-branch.yaml  frontend-branch.yml  frontend-master.yaml  frontend-master.yml  frontend.yml  hello-world-branch.yaml  hello-world-master.yaml  hello-world.yml  infrastructure-branch.yaml  infrastructure-master.yaml  infrastructure.yaml  infrastructure.yml  nodejs.yml  rebase.yml
cypress/: package.json
docs/: ci-setup.md
docs/architecture/: README.md  high-level.drawio
docs/testing/: test_approach.md
frontend/: .dockerignore  Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  tracing.js
frontend/components/: date.tsx  layout.tsx
frontend/lib/: posts.ts
frontend/manifests/: deployment.yaml  deployment.yml  kustomization.yaml  namespace.yaml  service.yaml
frontend/pages/: _app.tsx  index.js  index.tsx
frontend/posts/: ssg-ssr.md
future-nhs/: package.json
hello-world/: Cargo.toml  Dockerfile  Makefile  README.md
hello-world/dev/: cluster-ip-service.yaml  container-azm-ms-agentconfig.yaml  deployment.yaml
hello-world/manifests/: deployment.yaml  namespace.yaml  service.yaml
hello-world/src/: lib.rs  main.rs
hello-world/tests/: hello_world.rs
infrastructure/: README.md  terraform.tfstate
infrastructure/scripts/: configure-argo-cd.sh  create-dev-environment.sh  create-storage-account.sh  helm-setup-dev-ingress.sh  (+5 more)
test/: README.md  browserstack.json  package-lock.json  package.json
(+84 files in other folders)
