[package]
name = "hello-world"
version = "0.1.0"
authors = ["stuart.harris@red-badger.com"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
futures = "0.3.5"
smol = "0.1.4"
tide = "0.8.1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.0"

[dev-dependencies]
http-types = "1.2.0"
surf = "1.0.3"
