[package]
name = "hello-world"
version = "0.1.0"
authors = ["stuart.harris@red-badger.com"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
futures = "0.3.5"
opentelemetry-application-insights = "0.1.0"
opentelemetry = "0.6"
tide = "0.11.0"
tokio = { version = "0.2", features = ["macros", "time", "rt-core", "stream"]}
tracing = { version = "0.1", features = ["attributes"] }
tracing-futures = "0.2.4"
tracing-opentelemetry = "0.5.0"
tracing-subscriber = "0.2.0"

[dev-dependencies]
http-types = "1.2.0"
surf = "1.0.3"
